--- a/java-sdk/pom.xml
+++ b/java-sdk/pom.xml
@@ -35,6 +35,11 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.6.7.5</version>
   </dependency>
+  <dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    <version>2.8.6</version>
+  </dependency>
   </dependencies>
 
   <build>
