--- a/java/java-sdk-sample/pom.xml
+++ b/java/java-sdk-sample/pom.xml
@@ -5,10 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.sbc</groupId>
-  <artifactId>java-sdk</artifactId>
+  <artifactId>java-sdk-sample</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>java-sdk</name>
+  <name>java-sdk-sample</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
