--- a/java/java-sdk-sample/pom.xml
+++ b/java/java-sdk-sample/pom.xml
@@ -4,7 +4,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.sbc</groupId>
+  <groupId>com.sb.cloudapi.sample</groupId>
   <artifactId>java-sdk-sample</artifactId>
   <version>1.0-SNAPSHOT</version>
 
@@ -29,17 +29,17 @@
       <groupId>com.aliyun.api.gateway</groupId>
       <artifactId>sdk-core-java</artifactId>
       <version>1.1.7</version>
-  </dependency>
-  <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
-      <version>2.13.1</version>
-  </dependency>
-  <dependency>
-    <groupId>com.google.code.gson</groupId>
-    <artifactId>gson</artifactId>
-    <version>2.9.0</version>
-  </dependency>
+    </dependency>
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.13.1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.9.0</version>
+    </dependency>
   </dependencies>
 
   <build>
